# gNet

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  TODO  setup.py  tester.py
cmake/: compiler_common.cmake  compiler_gcc.cmake
docs/source/: gNet-v0.1.2.aux  gNet-v0.1.2.bbl  gNet-v0.1.2.blg  gNet-v0.1.2.out  gNet-v0.1.2.tex  gNet-v0.1.2.toc  gNet-v0.1.aux  gNet-v0.1.bbl  gNet-v0.1.blg  gNet-v0.1.out  gNet-v0.1.tex  gNet-v0.1.toc  gNet-v0.2.1.aux  gNet-v0.2.1.bbl  gNet-v0.2.1.blg  gNet-v0.2.1.out  gNet-v0.2.1.tex  gNet-v0.2.1.toc  gNet-v0.2.aux  gNet-v0.2.blg  gNet-v0.2.out  gNet-v0.2.tex  gNet-v0.2.toc  mgk.bib
gNet/: CMakeLists.txt  activation_functions.py  conv_utils.py  initializer.py  layer.py  loss_functions.py  metric.py  model.py  neuralnetwork.py  optimizer.py  regularizer.py  tensor.py  tensor_ops.py  utils.py
gNet/include/: graph.hpp  ops.hpp  tensor.hpp
gNet/src/: graph.cpp  tensor_ops.cpp
gNet/test/: cpp_ops_test.cpp  py_cpp_ops_test.py  py_wrapper.cpp  py_wrapper_test.py
platform/: CMakeLists.txt
platform/core/: CMakeLists.txt
platform/core/include/core/: dependency.hpp  graph.hpp  ops.hpp  tensor.hpp  tensor_ops.hpp
platform/core/source/: graph.cpp  tensor_ops.cpp
